--- a/SistemaVentas/src/main/java/administrador/FormProduct.form
+++ b/SistemaVentas/src/main/java/administrador/FormProduct.form
@@ -92,7 +92,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jlRevenue">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Ganancia"/>
+            <Property name="text" type="java.lang.String" value="Ganancia (%):"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
@@ -193,6 +193,11 @@
           </Constraints>
         </Component>
         <Component class="javax.swing.JSpinner" name="sRevenue">
+          <Properties>
+            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+              <Border info="null"/>
+            </Property>
+          </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
               <GridBagConstraints gridX="2" gridY="13" gridWidth="3" gridHeight="1" fill="2" ipadX="0" ipadY="0" insetsTop="15" insetsLeft="10" insetsBottom="0" insetsRight="10" anchor="10" weightX="0.0" weightY="0.0"/>
